my-deployment-eval.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-fapimysql-deployment
  namespace: default
labels:
  app: fapi-mysql
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fapi-mysql
  template:
    metadata:
      labels:
        app: fapi-mysql
    spec:
      containers:
        - name: mysql
          image: datascientest/mysql-k8s:1.0.0
          ports:
            - containerPort: 3306
        - name: fastapi
          image: ilipili/kubernetes-exam-pymysql:latest
          ports:
            - containerPort: 8000
