my-service-eval.yml
apiVersion: v1
kind: Service
metadata:
  name: my-fapi-mysql-service
  labels:
    app: fapi-mysql
spec:
  type: ClusterIP
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8000
  selector:
    app: fapi-mysql
