my-ingress-eval.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-fapi-mysql-ingress
spec:
  defaultBackend:
    service:
      name: my-fapi-mysql-service
      port:
        number: 8002
